refactor(property): Migrate to v2 property for redis (#73)
* refactor(property): migrate to v2 properties

* fix(tests): fix tests

* chore(deps): bump up lettuce core

* fix(tests): fix options default for Set