@@ -1,6 +1,6 @@
 package io.kestra.plugin.redis;
 
-import com.google.common.collect.ImmutableMap;
+import io.kestra.core.models.property.Property;
 import io.kestra.core.runners.RunContext;
 import io.kestra.core.runners.RunContextFactory;
 import io.kestra.core.serializers.JacksonMapper;
@@ -12,6 +12,8 @@ import jakarta.inject.Inject;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
+
+import java.util.Map;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
@@ -26,11 +28,11 @@ class GetTest {
 
     @Test
     void testGet() throws Exception {
-        RunContext runContext = runContextFactory.of(ImmutableMap.of());
+        RunContext runContext = runContextFactory.of(Map.of());
 
         Get task = Get.builder()
-            .url(REDIS_URI)
-            .key("key")
+            .url(Property.of(REDIS_URI))
+            .key(Property.of("key"))
             .build();
 
         Get.Output runOutput = task.run(runContext);
@@ -40,12 +42,12 @@ class GetTest {
 
     @Test
     void testGetJson() throws Exception {
-        RunContext runContext = runContextFactory.of(ImmutableMap.of());
+        RunContext runContext = runContextFactory.of(Map.of());
 
         Get task = Get.builder()
-            .url(REDIS_URI)
-            .key("keyJson")
-            .serdeType(SerdeType.JSON)
+            .url(Property.of(REDIS_URI))
+            .key(Property.of("keyJson"))
+            .serdeType(Property.of(SerdeType.JSON))
             .build();
 
         Get.Output runOutput = task.run(runContext);
@@ -55,16 +57,16 @@ class GetTest {
 
     @BeforeAll
     void setUp() throws Exception {
-        RunContext runContext = runContextFactory.of(ImmutableMap.of());
+        RunContext runContext = runContextFactory.of(Map.of());
         createSetTask("key", "value").run(runContext);
         createSetTask("keyJson", "{\"data\":5}").run(runContext);
     }
 
     static Set createSetTask(String key, String value) {
         return Set.builder()
-            .url(REDIS_URI)
-            .key(key)
-            .value(value)
+            .url(Property.of(REDIS_URI))
+            .key(Property.of(key))
+            .value(Property.of(value))
             .build();
     }
 }
